[package]
name = "kashida_typst"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies.wasm]
package = "wasm-minimal-protocol"
git = "https://github.com/astrale-sharp/wasm-minimal-protocol.git"

[dependencies]
kashida = "0.1.1"

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 'z'   # Optimize for size
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
